--- a/src/app/todos/components/footer/footer.component.html
+++ b/src/app/todos/components/footer/footer.component.html
@@ -3,4 +3,22 @@
         <strong>{{activeCount$ | async}}</strong>
         {{itemsLeftText$ | async}}
     </span>
+
+    <ul class="filters">
+        <li>
+            <a hreaf="/" [ngClass]="{selected: (filter$ | async) === filterEnum.all}" (click)="changeFilter($event, filterEnum.all)">
+                All
+            </a>
+        </li>
+        <li>
+            <a hreaf="/" [ngClass]="{selected: (filter$ | async) === filterEnum.active}" (click)="changeFilter($event, filterEnum.active)">
+                Active
+            </a>
+        </li>
+        <li>
+            <a hreaf="/" [ngClass]="{selected: (filter$ | async) === filterEnum.completed}" (click)="changeFilter($event, filterEnum.completed)">
+                Completed
+            </a>
+        </li>
+    </ul>
 </footer>
